# alien

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build_lib.cmake
.github/workflows/: cmake_ctest_multiplatform.yml
cmake/: install.cmake  install_gtest.cmake  transfer_files.cmake
include/: CMakeLists.txt  alphabet.h  generator.h
include/config/: config_value_access.h  generator_config.h
include/config/settings/: lexer.h  parser.h  settings.h  settings_lexer.h  settings_parser.h  settings_token.h  token.h
include/fwd/: lexer_fwd.h  parser_fwd.h
include/generalized/: generalized exception.h  generalized_exception.h  generalized_generator.h  generalized_lexer.h  generalized_parser.h  generalized_token.h
include/input/: input.h
include/languages/: base_language.h  cpp_language.h
include/lexer/: generator.h  lexer_generator.h  lexer_stubs.h
include/lexer/automata/: algorithm.h  automata.h  dfa.h  dfa_generator.h  generator.h  nfa.h  nfa_generator.h  partition.h  transition_table.h
include/lexer/config/rules/: lexer.h  parser.h  rules.h  rules_lexer.h  rules_parser.h  rules_token.h  token.h
include/lexer/config/settings/: parser.h  settings.h  settings_lexer.h  settings_parser.h  settings_token.h
include/lexer/regex/: ast.h  charclasses.h  lexer.h  parser.h  quantifier.h  ranges.h  ranges_classes.h  token.h
include/parser/: generator.h  parser_generator.h
include/parser/algorithm/: algofwd.h  algorithm.h
include/parser/algorithm/clr/: algorithm.h
include/parser/algorithm/lalr/: algorithm.h
include/parser/algorithm/slr/: algorithm.h
include/parser/config/rules/: lexer.h  parser.h  rules.h  rules_lexer.h  rules_parser.h  rules_token.h  token.h
include/parser/config/settings/: parser.h  settings.h
include/parser/generator/: base_helper.h  base_table_generator.h  clr.h  generator.h  lalr.h  slr.h
include/renderer/: base_renderer.h  cpp_renderer.h
include/templates/: lexer.template.txt  parser.template.txt  token.template.txt
include/templates/headers/: lexer.template.txt  parser.template.txt
include/templates/sources/: lexer.template.txt
include/util/: charutils.h  comparators.h  hash_vecset.h  lexer.h  lexing.h  parser.h  to_json.h  token.h  typeutils.h  u8string.h  util.h  vecset.h
resources/templates/cpp/headers/: lexer.template.txt  parser.template.txt
resources/templates/cpp/sources/: lexer.template.txt  parser.template.txt  token.template.txt
src/: generator.cpp
src/config/: generator_config.cpp
src/config/settings/: lexer.cpp  settings.cpp
src/input/: input.cpp
src/languages/: base_language.cpp  cpp_language.cpp
src/lexer/: lexer_generator.cpp
src/lexer/automata/: dfa.cpp  dfa_generator.cpp  generator.cpp  nfa.cpp  nfa_generator.cpp  partition.cpp
src/lexer/config/rules/: lexer.cpp  parser.cpp  rules.cpp
src/lexer/config/settings/: settings.cpp  settings_parser.cpp
src/lexer/regex/: lexer.cpp  parser.cpp  quantifier.cpp
src/parser/: parser_generator.cpp
src/parser/config/rules/: lexer.cpp  parser.cpp  rules.cpp
src/parser/config/settings/: settings.cpp
src/parser/generator/: base_helper.cpp  base_table_generator.cpp  clr.cpp  lalr.cpp  slr.cpp
src/renderer/: base_renderer.cpp  cpp_renderer.cpp
src/util/: charutils.cpp  lexing.cpp  token.cpp  u8string.cpp
test/: CMakeLists.txt
test/input/: input.cpp
test/lexer/automata/: dfa_generator.cpp  nfa_generator.cpp  partition.cpp
test/lexer/regex/: regex_parse.cpp
test/util/: charutils.cpp  lexing.cpp  token.cpp  typeutils.cpp  u8string.cpp  vecset.cpp
